# QSplat

./: .gitignore  CMakeLists.txt  README  README.md  gen_ply.py
docs/: UserGuide.md
src/: README  main_glfw.cpp  mempool.h  qsplat_draw_gaussian.cpp  qsplat_draw_gl.cpp  qsplat_draw_gl_ellip.cpp  qsplat_draw_software.cpp  qsplat_draw_software_tiles.cpp  qsplat_draw_spheres.cpp  qsplat_gui.cpp  qsplat_gui.h  qsplat_gui_camera.cpp  qsplat_gui_camera.h  qsplat_gui_glfw.cpp  qsplat_gui_glfw.h  qsplat_make_from_mesh.cpp  qsplat_make_from_mesh.h  qsplat_make_main.cpp  qsplat_make_qtree_v11.cpp  qsplat_make_qtree_v11.h  qsplat_model.cpp  qsplat_model.h  qsplat_shader.cpp  qsplat_shader.h  qsplat_traverse_v11.h  qsplat_util.h
src/extras.Darwin/: Info-in.plist  libwx_mac-2.3.r  qsplat-doc.icns  qsplat-doc_icon.tiff  qsplat.icns  qsplat_icon.tiff
